# python_project_BIUDS17_Gal_Zarchi

./: LICENSE  Module_A3.py  Module_Alpha3.py  README.md  default_settings.json  favorite_settings.json  favorites.json  main.py  main3.py  pyproject.toml  st_app.py  stapp.py  stapp2.py  stapp3.main.py  stapp3.py  stapp3backup.py  temp.py  temp10.py  temp2.py  temp3.py  temp4.py  temp5.py  temp6.py  temp7.py  temp8.py  temp9.py  try.py  try2.py  try3.py  try4.py  try5.py  try6.py  try7.py
