[tool.poetry]
name = "python-project-biuds17-gal-zarchi"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
geonamescache = "^2.0.0"
requests = "^2.32.3"
pytz = "^2024.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
